Adding latest changes to include migrations, and Users Controller

--- a/notes.org
+++ b/notes.org
@@ -183,7 +183,7 @@ Related revision to include '--openssl-legacy-provider' parameter in 'client/pac
 #+begin_src ruby
 has_many :cookouts
 has_many :foods
-through: cookouts
+through: :cookouts
 #+end_src
 - Cookout:
 #+begin_src ruby
@@ -194,7 +194,7 @@ belongs_to :user
 #+begin_src ruby
 has_many :cookouts
 has_many :users
-through: cookouts
+through: :cookouts
 #+end_src
 
 I then started by creating the associated user model accordingly with the 'rails g model user --no-test-framework' command:
@@ -239,4 +239,113 @@ Running via Spring preloader in process 15383
       invoke  active_record
       create    db/migrate/20221110023307_create_cookouts.rb
       create    app/models/cookout.rb
+#+end_src
+
+I then revised the 'db/migrate/20221110023307_create_cookouts.rb' migration file for the 'Cookout' model with the following contents:
+#+begin_src ruby
+class CreateCookouts < ActiveRecord::Migration[6.1]
+  def change
+    create_table :cookouts do |t|
+      t.belongs_to :user, null: false, foreign_key: true
+      t.belongs_to :food, null: false, foreign_key: true
+      t.string :name
+      t.string :start_time
+      t.string :end_time
+
+      t.timestamps
+    end
+  end
+end
+#+end_src
+
+I then modified the 'app/models/cookout.rb' Cookout model with the following contents:
+#+begin_src ruby
+class Cookout < ApplicationRecord
+    belongs_to :user
+
+    validates :name, presence: true
+    validates :start_time, presence: true
+    validates :end_time, presence: true
+end
+#+end_src
+
+I then created a related model for the 'Food' model with the 'rails g model food --no-test-framework' command:
+#+begin_src bash
+sam@HTCSamuelB:/mnt/c/Users/Samuel.Banya/Documents/FlatironSchoolProjects/CraigsCookout$ rails g model food --no-test-framework
+Running via Spring preloader in process 15424
+      invoke  active_record
+      create    db/migrate/20221110024427_create_foods.rb
+      create    app/models/food.rb
+#+end_src
+
+I then edited the corresponding 'db/migrate/20221110024427_create_foods.rb' migration file to include the following changes:
+#+begin_src ruby
+class CreateFoods < ActiveRecord::Migration[6.1]
+  def change
+    create_table :foods do |t|
+      t.string :name
+
+      t.timestamps
+    end
+  end
+end
+#+end_src
+
+I then revised the corresponding model in the 'app/models/food.rb' file with the following contents:
+#+begin_src ruby
+class Food < ApplicationRecord
+    has_many :cookouts
+    has_many :users, through: :cookouts
+
+    validates :name, presence: true
+end
+#+end_src
+
+I then ran the corresponding 'rails db:migrate' command:
+#+begin_src bash
+sam@HTCSamuelB:/mnt/c/Users/Samuel.Banya/Documents/FlatironSchoolProjects/CraigsCookout$ rails db:migrate
+== 20221110022549 CreateUsers: migrating ======================================
+-- create_table(:users)
+   -> 0.0102s
+== 20221110022549 CreateUsers: migrated (0.0103s) =============================
+
+== 20221110023307 CreateCookouts: migrating ===================================
+-- create_table(:cookouts)
+   -> 0.0048s
+== 20221110023307 CreateCookouts: migrated (0.0049s) ==========================
+
+== 20221110024427 CreateFoods: migrating ======================================
+-- create_table(:foods)
+   -> 0.0093s
+== 20221110024427 CreateFoods: migrated (0.0094s) =============================
+#+end_src
+
+I then worked on creating the 'Sign Up' feature by creating the 'UsersController' with the 'rails g controller users_controller --no-test-framework' command:
+#+begin_src bash
+sam@HTCSamuelB:/mnt/c/Users/Samuel.Banya/Documents/FlatironSchoolProjects/CraigsCookout$ rails g controller users_controller --no-test-framework
+Running via Spring preloader in process 15460
+      create  app/controllers/users_controller.rb
+#+end_src
+
+I then modified the 'app/controllers/users_controller.rb' Users Controller file with the following revisions:
+#+begin_src ruby
+class UsersController < ApplicationController
+    skip_before_action :authorize, only: :create
+
+    def create
+        user = User.create!(user_params)
+        session[:user_id] = user.id
+        render json: user, status: :created
+    end
+
+    def show
+        render json: @current_user
+    end
+
+    private
+
+    def user_params
+        params.permit(:username, :password, :password_confirmation)
+    end
+end
 #+end_src
